[package]
name = "testhttpd"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing =  "0.1.43"
tracing-subscriber = { version=  "0.3.22", features = ["fmt", "std", "json"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
